chore: fix alignment of social links on chrome

--- a/web/app/assets/stylesheets/components/_header.scss
+++ b/web/app/assets/stylesheets/components/_header.scss
@@ -52,7 +52,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: baseline;
-      justify-content: end;
+      justify-content: flex-end;
       width: auto;
     }
 
